VLC adaptive plugin crash for some server
int HTTPConnection::parseReply()
...
while(!line.empty() && line.compare("\r\n"))
{
size_t split = line.find_first_of(':');
size_t value = split + 1;
while(line.at(value) == ' ')
value++;
onHeader(line.substr(0, split), line.substr(value));
line = readLine();
}
...
When some server reply header has a key without value, there is a out of range exception at line.at(value).
A patch related to the bug:
demux: adaptive: fix out of range exception https://mailman.videolan.org/pipermail/vlc-devel/2017-July/114573.html