demux: adaptive: fix out of range exception

Fixes #18611

Signed-off-by: Francois Cartegnie <fcvlcdev@free.fr>